[project]
name = "space-up"
version = "0.1.0"
description = "Space Up is a simple Space Invaders inspired game to learn raylib5 in Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["game", "raylib", "space-invaders", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
authors = [
    {name = "Walkercito", email = "walkercitoliver@gmail.com"}
]
dependencies = [
    "raylib>=5.5.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]

[project.urls]
Repository = "https://github.com/Walkercito/space-up"
Issues = "https://github.com/Walkercito/space-up/issues"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = [
    "E203",    # whitespace before ':'
    "F403",    # star imports
    "F405",    # undefined names from star imports
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/space_up"]
